--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
 .w-70px{
   width: 70px!important;
 }
+.shadow-top-sm {
+    box-shadow: 0 -3px 10px rgba(0,0,0,.125)!important;
+}
 
 .notification{
   right: 10%;
