--- a/src/Components/ChatComponent/ContactsComponent/ContactsComponenet.css
+++ b/src/Components/ChatComponent/ContactsComponent/ContactsComponenet.css
@@ -1,8 +1,8 @@
 .contactsContainer{
     min-width: 200px;
-    height: 100vh;
+    height: 100%;
     width: 20%;
-    border-right: black 1px solid;
+    border-right: white 1px solid;
     box-shadow: 0 0 10px rgba(1, 1, 1, 0.8);
 }
 .hover-scale{
@@ -16,11 +16,9 @@
 
 
 .contactsContainer::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
 }
-.contactsContainer::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
+
 .contactsContainer::-webkit-scrollbar-thumb {
     background: #888;
 }
@@ -33,6 +31,6 @@
 .contactsContainer::-webkit-scrollbar-thumb:vertical {
     border-radius: 10px;
 }
-.contactsContainer::-webkit-scrollbar-button:hover {
-    background: #f1f1f1;
-}
+/*.contactsContainer::-webkit-scrollbar-button:hover {*/
+/*    background: #f1f1f1;*/
+/*}*/
