--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,9 @@
 .shadow-top-sm {
     box-shadow: 0 -3px 10px rgba(0,0,0,.125)!important;
 }
-
+html{
+  scroll-behavior: smooth;
+}
 .notification{
   right: 10%;
   position: relative;
